fix overlay z-index

--- a/assets/css/_overlay.styl
+++ b/assets/css/_overlay.styl
@@ -1,6 +1,6 @@
 .app-overlay
   width: 100%
-  z-index:  1
+  z-index:  2
   position: absolute
 
   .close
